add git actions to ProjectBase and StructureProject